--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html  
 # In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+# of the product and file versions while build-number is used as the build suffix. version: 1.0.2+3
+version: 1.0.2+3
 
 environment:
   sdk: ^3.7.0-209.1.beta
@@ -33,6 +33,9 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
   cloud_firestore: ^4.15.0
+  # 下面这两行是新增的
+  firebase_storage: ^11.0.16
+  image_picker: ^0.8.7+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
