--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,16 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
   cloud_firestore: ^4.15.0
+
   # 下面这两行是新增的
   firebase_storage: ^11.0.16
   image_picker: ^0.8.7+5
+  #record、start使用
+  share_plus: ^4.5.3
+  url_launcher: ^6.2.0
+  table_calendar: ^3.0.8
+  collection: ^1.18.0
+  shared_preferences: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
     - assets/images/logo.png
     - assets/images/profile.png
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
