--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
   cloud_firestore: ^4.15.0
-
+  firebase_messaging: ^14.7.10
   # 下面这两行是新增的
   firebase_storage: ^11.0.16
   image_picker: ^0.8.7+5
@@ -47,6 +47,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +72,7 @@ flutter:
   uses-material-design: true
 
   assets:
-  # To add assets to your application, add an assets section, like this:
+    # To add assets to your application, add an assets section, like this:
     - assets/images/logo.png
     - assets/images/profile.png
     - assets/
