--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
+  google_sign_in: ^6.2.1
   cloud_firestore: ^4.15.0
   firebase_messaging: ^14.7.10
   # 下面这两行是新增的
@@ -78,7 +79,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     - assets/images/logo.png
     - assets/images/profile.png
-    - assets/
+    - assets/images/google_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
